# vcf-content-factory

./: .env.example  .gitignore  ADMIN.md  AGENT_REVIEW.md  CLAUDE.md  Getting_Started.md  HOW_IT_WORKS.md  LICENSE  Memory.md  README.md  ROADMAP.md  STRUCTURE.md  demo-prompts.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  vcf_ops_concepts.md
.claude/: settings.json
.github/: release-notes-buildkit.md
alerts/: synology_fan_failure_alert.yaml  synology_storage_pool_health_alert.yaml  synology_volume_space_alert.yaml
bundles/: capacity-assessment.yaml  environment-config-status.yaml  storage-path-monitoring.yaml  test-host-vm-summary.yaml  test-sm-enable-verification.yaml  vks-core-consumption-bundle.yaml  vks-core-consumption.yaml  vm-performance.yaml
context/: README.md  adapter_describe_exploration.md  api_pattern_catalog.md  auth_vidb_oauth_flow.md  bug_report_pak_isunremovable_not_enforced.md  chart_widget_formats.md  content_api_surface.md  customgroup_authoring.md  customgroup_import_format.md  customgroup_relationship_grammar.md  dashboard_delete_api.md  defects.md  dictionary.md  federation_breaks_aria_ops_stitching.md  feedback_queue.md  framework_v2_migration.md  growth_path_2026_04_29.md  install_and_enable.md  internal_supermetrics_assign.md  known_limitations.md  lessons_dell_redfish_2026_05_18.md  lessons_pak_install_reliability.md  lessons_synology_sdk_2026_05_19.md  lessons_unifi_key_parity_2026_05_16.md  managed_paks.md  management_pack_authoring.md  mp_authoring_design_principles.md  mp_chain_authoring.md  mp_design_gitlab_2026_04_19.md  mp_icon_library.md  mp_schema_vs_existing_mp.md  mpb_adapter_jar_reverse_engineering.md  mpb_adapter_runtime_insights.md  mpb_alerts_symptoms_grammar.md  mpb_api_surface.md  mpb_build_examples_research.md  mpb_describe_xsd_canonical.md  mpb_designer_wire_format.md  mpb_explicit_key_investigation_2026_05_16.md  mpb_import_diff_unifi_2026_05_07.md  (+44 more)
customgroups/: local_vmfs_datastores.yaml  nfs_datastores.yaml  regular_vms.yaml  shared_vmfs_datastores.yaml  supervisor_control_plane_vms.yaml  test_powered_on_vms.yaml  vcls_vms.yaml  vks_worker_vms.yaml  vm_service_vms.yaml  vms_on_local_vmfs.yaml  vms_on_nfs.yaml  vms_on_shared_vmfs.yaml  vms_on_vsan.yaml  vms_rightsizing_candidates.yaml  vsan_datastores.yaml
dashboards/: README.md  capacity_assessment.yaml  compliance-overview.yaml  demand_driven_capacity_planning.yaml  demand_driven_capacity_v2.yaml  environment_config_status.yaml  mssql-query-performance.yaml  oracle-query-performance.yaml  test_host_vm_summary.yaml  test_sm_enable_verification.yaml  vks_core_consumption.yaml  vks_core_test.yaml  vm_perf_by_datastore_type.yaml  vm_perf_by_vcenter.yaml  vm_rightsizing_demo.yaml
decisions/: INDEX.md  dell-redfish-tier2.md  synology-dsm-tier2.md
designs/: auth-source-support-v1.md  content-structure-v2.md  content-structure-v3.md  curator-v1.md  defect-gate-pak-ci-v1.md  defect-registry-v1.md  demand-driven-capacity-v2.md  framework-reviewer-v1.md  publish-command-v1.md  publish-pr-mode-v4.md  release-lifecycle-v1.md  release-sdk-pointer-v1.md  reorg-v2-landing-page.md  sdk-docset-v1.md  stitcher-identity-and-additive-foreign-v1.md  suite-api-stitcher-tls-auth-cleanup-v1.md  synology-mp-v1.md  tier2-mp-architecture-plan.md  unifi-mp-v2.md  vm-rightsizing-demo.md  vsphere-storage-paths-mp-v1.md
diagrams/: README.md  framework-internals.excalidraw
docs/: 2026-04-15-synology-api-reference.md  2026-04-15-synology-community-tools.md  2026-04-15-synology-monitoring-metrics.md  internal-api.json  operations-api.json  reference-mpb-research.md  synology-api-mp-brief.md  vrops-content-management.md  vsphere-data-api-openapi.json
knowledge/: HOW_IT_WORKS.md  ROADMAP.md
lessons/: INDEX.md  content-root-is-content-dir.md  controller-describe-bare-instantiation.md  cross-mp-foreign-key-uniqueness-flags.md  cross-runtime-pak-upgrade-split-brain.md  foreign-resource-property-push.md  heatmap-empty-groupby-crashes-renderer.md  no-volatile-status-in-reference-docs.md  pak-content-bundling.md  pak-content-localization-bundles.md  pak-install-reliability.md  sdk-constants-are-display-names.md  sdk-paks-independent-repos.md  setrelationships-foreign-adapter-scoped.md  stitch-moid-not-unique-across-vcenters.md  suite-api-stitch-ssl-tofu-vs-java-http.md  unifi-metric-key-parity.md
managementpacks/: gitlab.yaml  synology_dsm.reference.yaml  synology_dsm.yaml  synology_dsm_chain1.yaml  synology_dsm_kiss.yaml  synology_dsm_roundtrip.yaml  synology_nas.yaml
memory/: INDEX.md
recommendations/: synology_fan_failure.yaml  synology_ups_on_battery.yaml
reference/: README.md
releases/: capacity-assessment-dashboard.yaml  demand-driven-capacity-v2.yaml  idps-planner-3.5.yaml  idps-planner.yaml  quarterly-capacity-review-dashboard.yaml  storage-path-monitoring.yaml  synology-diskstation-managementpack.yaml  unifi-controller-managementpack.yaml  unifi-network-integration-managementpack.yaml  vks-core-consumption-bundle.yaml  vks-core-consumption-dashboard.yaml  vks-core-consumption-report.yaml
rules/: INDEX.md  actions-require-tier2.md  advanced-auth-requires-tier2.md  tier-routing.md  (+38 more)
(+1034 files in other folders)
